syntax = "proto3";
option go_package = ".;protos";


message DockerFileOutput{
  bool used=1;

}

