syntax = "proto3";
option go_package = "./protos/outputs/global";
import "protos/outputs/global/command.proto";

message MigrationCommandsOutput{
  // check MigrationCommand
  bool used = 1;
  // list of all MigrationCommand
  repeated Command migrationCommand = 2;
}


